quiz/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-site
  labels:
    app: quiz-site
spec:
  selector:
    matchLabels:
      app: quiz-site
  template:
    metadata:
      labels:
        app: quiz-site
    spec:
      nodeName: worker-k3s
      containers:
      - name: quiz
        image: johannes33/quiz:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 300m
          requests:
            cpu: 100m
