quiz/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.31.2 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/deploymenst-default: "true"
        io.kompose.service: redis
    spec:
      containers:
        - image: redis:alpine
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
          name: redis
          resources: {}
      restartPolicy: Always
status: {}
