quiz/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: worker
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.31.2 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/deploymenst-default: "true"
        io.kompose.service: worker
    spec:
      containers:
        - args:
            - arq
            - classquiz.worker.WorkerSettings
          image: worker
          name: worker
          resources: {}
      restartPolicy: Always
status: {}
