quiz/proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: proxy
  name: proxy
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8080
  selector:
    io.kompose.service: proxy
status:
  loadBalancer: {}
