quiz/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz-site-service
spec:
  selector:
    app: quiz-site
  ports:
    - protocol: TCP
      port: 80
